Website/page_ex.html is how things look right now, reshuffling, and colour-changes of course, but should probably stop messing with it for now.

--- a/Website/headerex2.html
+++ b/Website/headerex2.html
@@ -6,11 +6,10 @@
     </head>
     <body>
       <header class="Header_style">
-      <div class="title">
-          <p>Fox Wildlife <br>
+       
+          <div class="title">Fox Wildlife <br>
             Conservatory
-          </p>
-      </div>
+          </div>
           <div class="Header_large">
           <a class="Header_small" href="/test/index.php">Home</a>
           <a class="Header_small" href="test">Browse </a>  
